finished my first notebook

--- a/my_first_notebook.py.ipynb
+++ b/my_first_notebook.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1854b6f9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "54aad349",
    "metadata": {},
    "outputs": [
@@ -30,40 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d7df6ceb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1e64cbeb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = x + x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "df123d4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(x)"
+    "## use dd to delete cells\n",
+    "## use shift enter to run cells\n",
+    "## ctr+ s to save"
    ]
   }
  ],
