--- a/python_data_structure_manipulation_exercises.py.ipynb
+++ b/python_data_structure_manipulation_exercises.py.ipynb
@@ -1,37 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "57974917",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db628332",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "The following questions reference the students data structure below. Write the python code to answer the following questions:\n",
+    "# 20 Python Data Structure Manipulation Exercises\n",
     "\n",
-    "How many students are there?\n",
-    "How many students prefer light coffee? For each type of coffee roast?\n",
-    "How many types of each pet are there?\n",
-    "How many grades does each student have? Do they all have the same number of grades?\n",
-    "What is each student's grade average?\n",
-    "How many pets does each student have?\n",
-    "How many students are in web development? data science?\n",
-    "What is the average number of pets for students in web development?\n",
-    "What is the average pet age for students in data science?\n",
-    "What is most frequent coffee preference for data science students?\n",
-    "What is the least frequent coffee preference for web development students?\n",
-    "What is the average grade for students with at least 2 pets?\n",
-    "How many students have 3 pets?\n",
-    "What is the average grade for students with 0 pets?\n",
-    "What is the average grade for web development students? data science students?\n",
-    "What is the average grade range (i.e. highest grade - lowest grade) for dark coffee drinkers?\n",
-    "What is the average number of pets for medium coffee drinkers?\n",
-    "What is the most common type of pet for web development students?\n",
-    "What is the average name length?\n",
-    "What is the highest pet age for light coffee drinkers?"
+    "# The following questions reference the students data structure below. \n",
+    "# Write the python code to answer the following questions:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# How many students are in web development? data science?\n",
+    "# What is the average number of pets for students in web development?\n",
+    "# What is the average pet age for students in data science?\n",
+    "# What is most frequent coffee preference for data science students?\n",
+    "# What is the least frequent coffee preference for web development students?\n",
+    "# What is the average grade for students with at least 2 pets?\n",
+    "# How many students have 3 pets?\n",
+    "# What is the average grade for students with 0 pets?\n",
+    "# What is the average grade for web development students? data science students?\n",
+    "# What is the average grade range (i.e. highest grade - lowest grade) for dark coffee drinkers?\n",
+    "# What is the average number of pets for medium coffee drinkers?\n",
+    "# What is the most common type of pet for web development students?\n",
+    "# What is the average name length?\n",
+    "# What is the highest pet age for light coffee drinkers?\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "e99e6c76",
    "metadata": {},
    "outputs": [],
@@ -155,6 +162,261 @@
     "    },\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4cb8ef19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 14 students\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many students are there\n",
+    "print('there are', len(students), 'students')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "49d9b932",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 3 students that like light coffee\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many students prefer light coffee? For each type of coffee roast?\n",
+    "count = 0\n",
+    "for i in students:\n",
+    "    if i[\"coffee_preference\"] == 'light':\n",
+    "        count +=1\n",
+    "print('there are', count, 'students that like light coffee')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "638d9bf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 3 types of pets\n",
+      "there are 4 horses\n",
+      "there are 11 cats\n",
+      "there are 3 dogs\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many types of each pet are there?\n",
+    "        \n",
+    "pet_count = {'cat':0, 'dog':0, 'horse':0}\n",
+    "the_list_of_species = []\n",
+    "for i in students:\n",
+    "    for j in i['pets']:\n",
+    "        the_list_of_species.append(j['species'])\n",
+    "\n",
+    "\n",
+    "for y in the_list_of_species:\n",
+    "    if y == 'horse':\n",
+    "        pet_count['horse'] += 1\n",
+    "    elif y == 'cat':\n",
+    "        pet_count['cat'] += 1\n",
+    "    elif y == 'dog':\n",
+    "        pet_count['dog'] += 1\n",
+    "        \n",
+    "print('there are 3 types of pets')\n",
+    "print('there are', pet_count['horse'], 'horses\\n'\n",
+    "      'there are', pet_count['cat'], 'cats\\n'\n",
+    "      'there are', pet_count['dog'], 'dogs\\n'\n",
+    "     )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5abd88ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 91, 82, 71]\n",
+      "[75, 73, 86, 100]\n",
+      "[70, 89, 69, 65]\n",
+      "[73, 66, 83, 92]\n",
+      "[78, 98, 85, 65]\n",
+      "[76, 70, 96, 81]\n",
+      "[69, 94, 89, 86]\n",
+      "[87, 79, 90, 99]\n",
+      "[74, 99, 93, 89]\n",
+      "[82, 92, 91, 65]\n",
+      "[70, 92, 65, 99]\n",
+      "[100, 86, 91, 87]\n",
+      "[80, 70, 68, 98]\n",
+      "[73, 99, 86, 98]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many grades does each student have? \n",
+    "# Do they all have the same number of grades?\n",
+    "the_count_of_grades = []\n",
+    "grades = []\n",
+    "the_same_length = True\n",
+    "for i in students:\n",
+    "    for j in i[\"grades\"]:\n",
+    "        grades.append(j)\n",
+    "    the_count_of_grades.append(grades)\n",
+    "    grades = []  \n",
+    "for l in the_count_of_grades:\n",
+    "    print(l)\n",
+    "    if len(l) != 4:\n",
+    "        the_same_length = False\n",
+    "        print(l,'Some students have more or less than 3 grades')\n",
+    "        \n",
+    "### the amount of grades per student in 4\n",
+    "\n",
+    "\n",
+    "\n",
+    "## yes they all have the same number of grades\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "6199af7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student name: Ada Lovelace \n",
+      "student average: 78.5 \n",
+      "\n",
+      "student name: Thomas Bayes \n",
+      "student average: 83.5 \n",
+      "\n",
+      "student name: Marie Curie \n",
+      "student average: 73.25 \n",
+      "\n",
+      "student name: Grace Hopper \n",
+      "student average: 78.5 \n",
+      "\n",
+      "student name: Alan Turing \n",
+      "student average: 81.5 \n",
+      "\n",
+      "student name: Rosalind Franklin \n",
+      "student average: 80.75 \n",
+      "\n",
+      "student name: Elizabeth Blackwell \n",
+      "student average: 84.5 \n",
+      "\n",
+      "student name: Rene Descartes \n",
+      "student average: 88.75 \n",
+      "\n",
+      "student name: Ahmed Zewail \n",
+      "student average: 88.75 \n",
+      "\n",
+      "student name: Chien-Shiung Wu \n",
+      "student average: 82.5 \n",
+      "\n",
+      "student name: William Sanford Nye \n",
+      "student average: 81.5 \n",
+      "\n",
+      "student name: Carl Sagan \n",
+      "student average: 91.0 \n",
+      "\n",
+      "student name: Jane Goodall \n",
+      "student average: 79.0 \n",
+      "\n",
+      "student name: Richard Feynman \n",
+      "student average: 89.0 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is each student's grade average?\n",
+    "student_average_dict = {}\n",
+    "count = 0\n",
+    "student_average = 0\n",
+    "\n",
+    "for i in students:\n",
+    "    for j in i['grades']:\n",
+    "        student_average += j\n",
+    "        count += 1\n",
+    "        \n",
+    "    student_average_dict[i[\"student\"]] = round(student_average / count, 2)\n",
+    "    \n",
+    "    count  = 0\n",
+    "    student_average = 0\n",
+    "    \n",
+    "\n",
+    "for i in student_average_dict:\n",
+    "    print('student name:', i, '\\nstudent average:', student_average_dict[i] , '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "98755a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ada Lovelace': ['horse'], 'Thomas Bayes': [], 'Marie Curie': ['cat'], 'Grace Hopper': ['dog', 'cat'], 'Alan Turing': ['horse', 'horse', 'dog'], 'Rosalind Franklin': [], 'Elizabeth Blackwell': ['cat'], 'Rene Descartes': ['cat', 'cat'], 'Ahmed Zewail': ['cat', 'cat'], 'Chien-Shiung Wu': ['cat'], 'William Sanford Nye': ['cat', 'cat'], 'Carl Sagan': ['cat'], 'Jane Goodall': ['horse'], 'Richard Feynman': ['dog']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many pets does each student have?\n",
+    "the_students_pets = {}\n",
+    "list_of_pets = []\n",
+    "\n",
+    "\n",
+    "for i in students:\n",
+    "    for j in i['pets']:\n",
+    "        list_of_pets.append(j[\"species\"])\n",
+    "        \n",
+    "    the_students_pets[i[\"student\"]] = list_of_pets \n",
+    "    list_of_pets = []\n",
+    "print(the_students_pets)\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e655f1f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
