--- a/control_structures_exercises.py.ipynb
+++ b/control_structures_exercises.py.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "a47d3521",
    "metadata": {},
    "outputs": [
@@ -321,17 +321,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter a number7\n",
-      "7 * 1 = 7\n",
-      "7 * 2 = 14\n",
-      "7 * 3 = 21\n",
-      "7 * 4 = 28\n",
-      "7 * 5 = 35\n",
-      "7 * 6 = 42\n",
-      "7 * 7 = 49\n",
-      "7 * 8 = 56\n",
-      "7 * 9 = 63\n",
-      "7 * 10 = 70\n"
+      "enter a number: 3\n",
+      "3 * 1 = 3\n",
+      "3 * 2 = 6\n",
+      "3 * 3 = 9\n",
+      "3 * 4 = 12\n",
+      "3 * 5 = 15\n",
+      "3 * 6 = 18\n",
+      "3 * 7 = 21\n",
+      "3 * 8 = 24\n",
+      "3 * 9 = 27\n",
+      "3 * 10 = 30\n"
      ]
     }
    ],
@@ -339,7 +339,7 @@
     "# For Loops\n",
     "\n",
     "# Write some code using a for loop that prompts the user for a number, \n",
-    "the_number = input('enter a number')\n",
+    "the_number = input('enter a number: ')\n",
     "# then shows a multiplication table up through 10 for that number.\n",
     "for i in range(1, 11):\n",
     "    print(the_number, '*', i, '=', int(the_number) * i)\n",
